boulder/tests/compile_fail/module/intern_with_path.bo
# Invalid `path` attribute for inline module
# (4:

@path(intern)
mod intern {
    fn hey() -> Bool {
        True
    }
}